--- a/css/style.css
+++ b/css/style.css
@@ -1,42 +1,126 @@
+#header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 999;
+    /*메뉴를 메일비주얼 위로 올려준다.*/
+}
+
+#header.on {
+    background: rgb(54, 47, 44, 0.75);
+    /*rgb로 바꿔주고 0.75적으면 비치게 된다. 비치는거 싫으면 1 주면된다.*/
+}
+
 #header .hd_wrap {
     display: flex;
+    /*가로배치*/
+    justify-content: space-between;
+    /*1분코딩flex읽어봐*/
     align-items: center;
+    margin: 0 80px;
+
+    height: 80px;
 }
 
-#header h1 a img {
-    height: 40px;
+#header a {}
+
+#header h1 {
+    flex: 0 0 156px;
+    /*늘어지지도 줄어들지도 말고 156px*/
 }
 
-#header .gnb {
-    margin-left: auto;
+#header h1 img {
+    height: 32px;
 }
 
 #header .gnb>ul {
     display: flex;
+    /*기준 잡기*/
     gap: 40px;
 }
 
 #header .gnb>ul>li>a {
     display: block;
-    line-height: 120px;
-
-    font-size: 18px;
+    line-height: 80px;
+    white-space: nowrap;
+    color: #fff;
 }
 
-#header.on .gnb>ul>li>a {
-    line-height: 120px;
+#header .gnb>ul>li {
+    position: relative;
 }
 
-#header .utils {
+#header .gnb>ul>li ul {
+    position: absolute;
+    top: 72px;
+    left: 50%;
+
+    transform: translate(-50%, 8px);
+
+    background-color: rgb(54, 47, 44, 0.75);
+    border: 1px solid #b79e93;
+    border-radius: 8px;
+    overflow: hidden;
+
+    opacity: 0;
+    visibility: hidden;
+
+    transition: 0.4s;
+}
+
+#header .gnb>ul>li:hover ul {
+    opacity: 1;
+    visibility: visible;
+    transform: translate(-50%, 0);
+}
+
+#header .gnb>ul>li ul a {
+    display: block;
+    padding: 0 24px;
+    color: #fff;
+    white-space: nowrap;
+    text-align: center;
+    line-height: 40px;
+    font-size: 14px;
+
+}
+
+#header .gnb>ul>li ul a:hover {
+    background: #fff;
+    color: #362f2c;
+}
+
+#header .gnb>ul>li ul li~li a {
+    border-top: 1px solid #b79e93;
+}
+
+#header .utils a {
     display: flex;
-    gap: 16px;
-    margin-left: 80px;
+    align-items: center;
+    gap: 8px;
+    color: #fff;
+    background: linear-gradient(to right, #ff6347, #f00);
+    /*신기한기술*/
+    height: 40px;
+    padding: 0 24px;
+    border-radius: 20px;
+    white-space: nowrap;
+    /*반응형할때필요*/
+}
+
+#header .utils a span {
+    margin-top: -2px;
+    /*서비스기때문에 안적어도되는 부분. 창업안내 글자가 밑으로 내려가있어서 올려줬음*/
 }
 
 .main_visual {
     position: relative;
-    background: url(../받은자료/meat-1155132_1920.jpg) no-repeat center center/cover;
-    height: 840px;
+    /*슬라이드 깔때 필요함*/
+    background: url(../images/main_visual01.png) no-repeat center center/cover;
+    /*no-repeat center center/cover 외워라*/
+    height: 640px;
+    /*높이 안깔리면 배경 안나온다.*/
 }
 
 .main_visual .slg {
@@ -44,87 +128,404 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    text-align: center;
+    /*글자 가운데로 배치 top,left,transform 외워라*/
+
+    display: flex;
+    flex-direction: column;
+    /*flex의 방향을 바꿔준다, 자식 요소들이 위 → 아래(세로) 방향으로 정렬*/
+    align-items: center;
 }
 
 .main_visual .slg h2 {
-    font-size: 40px;
     color: #fff;
+    font-size: 40px;
+    font-weight: 600;
+    text-align: center;
+    text-shadow: 0 0 4px rgba(0, 0, 0, 0.25);
+    /*글자테두리만들기 수치, 농도 조절하면됨*/
 }
 
 .main_visual .slg p {
-    font-size: 16px;
-    line-height: 16px;
     color: #fff;
-    margin-top: 16px;
-}
-
-.main_content .title {
-    max-width: 1170px;
-    margin: 0 auto;
-    margin-bottom: 40px;
-}
-
-.main_content .title h2 {
-    font-size: 40px;
-    font-weight: 600;
-    margin-bottom: 16px;
-}
-
-.main_content .title p {
     font-size: 16px;
     font-weight: 400;
-
+    text-align: center;
+    margin-top: 24px;
+    /*위를 띄워줌*/
+    text-shadow: 0 0 4px rgba(0, 0, 0, 0.25);
 }
 
-.main_content .inner {
-    display: flex;
-    gap: 30px;
-}
-
-.main_content .inner .itm strong {
-    display: block;
+.main_visual .slg a {
     margin-top: 16px;
-    font-size: 16px;
-    line-height: 16px;
+}
+
+.main_menu .swiper-wrapper {
+    transition-timing-function: linear;
+    /*linear 등속으로 가라?*/
+}
+
+.main_menu .slide_wrap .itm img {
+    transform: scale(0.9);
+    /*여기서 작게 만들어놓고 hover에서 크게 만들면 이미지 잘리지 않는다.*/
+    transition: 0.4s;
+    /*천천히 커지는거 transition*/
+}
+
+.main_menu .slide_wrap .itm img:hover {
+    transform: scale(1);
+    /*그냥 커지는거 transform*/
+}
+
+.main_menu .slide_wrap .itm strong {
+    display: block;
+    /*박스가 아니니까 디스플레이 블럭으로 박스를 만들어준다.*/
+    text-align: center;
+    margin-bottom: 16px;
+    font-weight: 600;
+}
+
+.main_menu .slide_wrap .itm p {
     text-align: center;
 }
 
-.main_event {
+.main_menu .btn_wrap {
+    margin-top: 40px;
+    text-align: center;
+}
+
+/*여기부터 중요한 파트다. 나누는 방법 배우고 있음*/
+.main_info {
     background: #f9f9f9;
+    /*배경색*/
 }
 
-.main_event .title {
-    max-width: 1170px;
-    margin: 0 auto;
-    margin-bottom: 40px;
+.main_info .inner {
+    display: flex;
+    /*가로배치*/
+    align-items: center;
+    gap: 30px;
 }
 
-.main_event .title h2 {
-    font-size: 40px;
-    font-weight: 600;
+.main_info .title h2 span {
+    display: block;
+    /*아래 위 글을 줄바꿈 해준다.*/
     margin-bottom: 16px;
-}
-
-.main_event .title p {
     font-size: 16px;
     font-weight: 400;
-
 }
 
-.main_event .inner {
+.main_info .inner .left {
+    flex: 1;
+}
+
+.main_info .inner .right {
+    flex: 3;
+
+    display: flex;
+    /*3개 가로배치된다.*/
+    gap: 30px;
+}
+
+/*flex1, flex3은 left가 1을 가지고 right가 3을 가진다.*/
+
+.main_info .inner .right .itm {
+    flex: 1;
+    /*나눠준거 한칸씩 차지한다.*/
+
+    border-top: 1px solid #333;
+    /*아이템 위 줄 만들어주기*/
+    padding-top: 64px;
+}
+
+.main_info .inner .right .itm strong {
+    font-size: 40px;
+    font-weight: 600;
+    font-family: "Noto Serif KR", serif;
+}
+
+.main_info .inner .right .itm p {
+    margin-top: 24px;
+    /*p는 박스이니까 마진 탑 가능하다*/
+}
+
+.main_news {}
+
+.main_news .inner {
     display: flex;
     gap: 30px;
 }
 
-.main_event .inner .itm strong {
-    display: block;
+.main_news .inner .itm {
+    flex: 1;
+    /*한 칸씩 차지하도록*/
+}
+
+.main_news .inner .itm img {
+    width: 100%;
+    height: 290px;
+    object-fit: cover;
+    /*사진 크기 조절, 단점은 사진이 잘린다.*/
+}
+
+.main_news .inner .itm p {
     margin-top: 16px;
-    font-size: 16px;
-    line-height: 16px;
-    text-align: center;
+}
+
+.main_house {
+    position: relative;
+    /*before에 기준이 필요하니까 relative적어줘야한다.*/
+    padding: 120px;
+    /*이미지 세로 길이가 짧다 생각하면 늘리면된다.*/
+    background: url(../images/main_house.jpg) no-repeat center center/cover;
+    background-attachment: fixed;
+}
+
+.main_house::before {
+    /*배경 톤다운*/
+    content: "";
+    position: absolute;
+    inset: 0 0 0 0;
+    /*인셋 좌표를 한꺼번에 줄 때 사용*/
+    background: #000;
+    /*순수한 검정을 꼭 사용해야한다. 다른색 사용하면 깨끗한 정도가 달라진다.*/
+    opacity: 0.5;
+    /*4분의1정도면 0.25*/
+}
+
+.main_house .title {
+    position: relative;
+    /*어두워졌던 타이틀을 앞으로 빼준다*/
+    margin-bottom: 0;
+    /*글자가 가운데에 위치하게 된다.*/
+}
+
+.main_house .title h2 {
+    color: #fff;
+}
+
+.main_house .title p {
+    margin-bottom: 48px;
+    color: #fff;
+}
+
+.main_interior .inner {
+    display: flex;
+    align-items: center;
+    /*쪼그라들여서 센터로 보내주기???*/
+    gap: 30px;
+}
+
+.main_interior .inner>* {
+    flex: 1;
+    min-width: 0;
+    /*overflow: hidden;& min-width: 0;
+    js쓰고 박스 원위치 시키는 방법, 이해안되는부분, 오늘의 핵심이다.*/
+}
+
+.main_interior .left p {
+    margin-bottom: 40px;
+}
+
+.main_interior .main_interior_slide {
+    border-radius: 40px;
+}
+
+.main_interior .main_interior_slide .itm img {
+    width: 100%;
+    /*100%는 박스를 채우라는 이야기*/
+    height: 400px;
+    object-fit: cover;
+    /*사이즈때문에쪼그라든이미지밖으로랜더링??*/
+}
+
+.main_interior .right {
+    position: relative;
+}
+
+.main_interior .arrows {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    right: 0;
+    z-index: 2;
+    /*999를 주면 안된다. 그럼 나중에 헤더를 덮어버린다.*/
+    transform: translate(0, -50%);
+    /*좌우로0아래위로-50%*/
+}
+
+.main_interior .arrows button {
+    position: absolute;
+    top: 0;
+
+    /*버튼을 동그랗게 만들거다*/
+    width: 40px;
+    height: 40px;
+    border: 1px solid #ddd;
+    border-radius: 50%;
+    background: #fff;
+    /*뒤가 비치면 안되니까*/
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.25);
+    /*box-shadow 약간 번지는 효과*/
+}
+
+.main_interior .arrows button svg {
+    margin-top: 2px;
+}
+
+.main_interior .arrows .prev {
+    left: 0;
+    transform: translate(-50%, -50%);
+}
+
+.main_interior .arrows .next {
+    right: 0;
+    transform: translate(50%, -50%);
+}
+
+.main_interior .page {
+    /*도트 내맘대로 바꾸기*/
+    display: flex;
+    justify-content: center;
+
+    /*도트 사진위로 올리기*/
+    position: absolute;
+    bottom: 40px;
+    left: 0;
+    right: 0;
+    z-index: 3;
+}
+
+.main_interior .page span {
+    width: 16px;
+    height: 16px;
+    background: #fff;
+    border-radius: 8px;
+    /*높이의 반만큼 설정하면된다.*/
+    opacity: 1;
+    /*opacity도트흐린거진하게*/
+    transition: 0.4s;
+}
+
+.main_interior .page span.swiper-pagination-bullet-active {
+    width: 80px;
+    /*페이지검사해서swiper-pagination-bullet-active가져왔음*/
+}
+
+.main_sns {
+    background: #f9f9f9;
+    /*섹션 나눠주는거 제일 중요하다.*/
+}
+
+.main_sns .inner {
+    position: relative;
+}
+
+.main_sns .arrows {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    z-index: 1;
+    /*1해줘야 이미지 위로 올라온다.*/
+    transform: translate(-50%, -50%);
+
+    width: calc(100% + 80px);
+}
+
+.main_sns .arrows button {
+    position: absolute;
+    top: 0;
+
+    /*버튼을 동그랗게 만들거다*/
+    width: 40px;
+    height: 40px;
+    border: 1px solid #ddd;
+    border-radius: 50%;
+    background: #fff;
+    /*뒤가 비치면 안되니까*/
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.25);
+    /*box-shadow 약간 번지는 효과*/
+}
+
+.main_sns .arrows .prev {
+    left: 0;
+    transform: translate(-50%, -50%);
+}
+
+.main_sns .arrows .next {
+    right: 0;
+    transform: translate(50%, -50%);
 }
 
 #footer {
-    padding: 80px 0;
+    padding: 64px 0 240px 0;
+    /*상우하좌순서이다, 상은 꼭 80px지켜주지않아도된다*/
+    background: #362f2c;
+}
+
+#footer a {
+    color: #fff;
+}
+
+#footer .inner {
+    display: flex;
+    flex-direction: column;
+    /*flex방향을바꿔준다*/
+    align-items: center;
+}
+
+#footer .sns svg {
+    stroke: #fff;
+}
+
+#footer .customer {
+    display: flex;
+    gap: 24px;
+
+    margin-top: 16px;
+}
+
+#footer strong {
+    margin-top: 40px;
+    margin-bottom: 24px;
+    color: #fff;
+}
+
+#footer p {
+    display: flex;
+    gap: 32px;
+    color: #fff;
+    font-size: 15px;
+    line-height: 24px;
+}
+
+#footer p span {
+    /*사이사이 바를 넣어줄거다*/
+    position: relative;
+}
+
+#footer p span~span::before {
+    content: "";
+    /*content는 필수*/
+    position: absolute;
+    top: 50%;
+    left: -16px;
+    width: 1px;
+    height: 0.5em;
+
+    background: #ddd;
+
+    transform: translate(0, -50%);
+    /*transform 쓰기 싫으면 top 8px, bottom 8px바꿔주고 tf빼면됨*/
+}
+
+#footer .utils {
+    display: flex;
+    gap: 24px;
+
+    margin: 16px 0;
+    /*아래위 띄워주기*/
+}
+
+#footer address {
+    color: #fff;
 }
